# htch-invites

./: Cargo.toml
invites_api/: Cargo.toml
invites_api/src/: domains.rs  invitations.rs  main.rs
invites_cli/: Cargo.toml
invites_cli/src/: args.rs  main.rs
invites_shared/: Cargo.toml
invites_shared/src/: app.rs  db.rs  domains.rs  invites.rs  lib.rs  lists.rs  notification_services.rs
invites_shared/src/invites/: mod.rs  models.rs  traits.rs
invites_shared/src/notification_services/: aws_ses.rs  traits.rs
