[package]
name = "invites_shared"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
async-trait = "0.1.58"
chrono = "0.4.22"
surrealdb = "1.0.0-beta.8"
tokio = { version = "1", features = ["full"] }
